# wechat-rpa-desktop-standalone

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: development-guidelines.md  orchestrator-state.md  rpa-hardening-flow.md  rpa-hardening-plan.md  桌面客户端登录对接文档.md  项目文档索引.md
docs/tasks/: README.md
python/: pyproject.toml  requirements.txt
python/backend/: debug_ocr.py
python/backend/app/: main.py
python/backend/app/api/: deps.py
python/backend/app/api/routes/: audit.py  friend_acceptance.py  health.py  leads.py  rpa.py  upstream.py
python/backend/app/core/: audit.py  config.py  errors.py  paths.py  rate_limit.py  security.py
python/backend/app/schemas/: audit.py  friend_acceptance.py  lead.py  rpa.py
python/backend/app/services/: consent_service.py  friend_acceptance.py  lead_service.py  rpa_orchestrator.py  simulation_rpa.py  startup_reconciler.py  upstream_client.py  upstream_lead_source.py  upstream_scheduler.py  vision_locator.py  wechat_rpa.py
python/backend/app/services/platform/: __init__.py  base.py  macos.py  windows.py
python/backend/app/storage/: sqlite_store.py
python/backend/app/tests/: test_friend_acceptance.py  test_lead_stats.py  test_risk_frozen_and_retry_precheck.py  test_rpa_acceptance_lifecycle.py  test_rpa_api.py  test_startup_reconciler.py  test_upstream_api.py  test_upstream_client.py  test_upstream_client_relogin.py  test_upstream_lead_source.py  test_upstream_scheduler.py  test_upstream_storage.py  test_vision_locator.py
python/backend/app/workers/: local_queue.py
python/backend/assets/wechat_templates/: README.md
scripts/tests/: boardCopy.test.mjs  leadDisplay.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  terminal.rs
src/hooks/: useAudits.ts  useCloudTasks.ts  useHashRoute.ts  useJobSnapshot.ts  useLeadJobs.ts  useLeads.ts  useLeadsStats.ts  useTheme.ts  useToast.ts
src/lib/: api.ts  auditTranslate.ts  leadDetailTabs.ts  leadDisplay.ts  (+6 more)
(+72 files in other folders)
